code update where user enter same todo again

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <div class="all-todos-show"></div>
       </div>
     </div>
+    <div class="error"></div>
     <script src="index.js"></script>
   </body>
 </html>
